--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
 	<script>
 		let myDate = new Date();
 		let myHours = myDate.getHours();
-		let myGreeting = ";
-		let myColor = ";
+		let myGreeting = "";
+		let myColor = "";
 
 		if(myHours >12){
-		myGreeting = "Good Afternoon!");
+		myGreeting = "Good Afternoon!";
 		myColor = "orange";
 		}else{
-		myGreeting = "Good Morning?");
-		myColor = "yellow';
+		myGreeting = "Good Morning?";
+		myColor = "yellow";
 		}
 
 		document.getElementById('mydiv').innerHTML = myGreeting;
