fixes Java image test

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 	 <p>There is an image with a class of FLEXIBLE which is set to a max-width equal to the size of the image.  Simutaneously the class sets the image to a percentage width, allowing the image to flex in size.  The height is not changed, as this would skew the image.</p>
 	 <p>The LIST elements inside the NAV are displayed inline by setting the display to be inline-block.  Bullets are removed by setting the UL to display</p>
 	 <p>The FOOTER includes a clear:both to keep everything above it!</p>
-	 	<img id="night" src="C:\Users\Student\Documents\GitHub\time-of-day\images\night.jpg">
-		<img id="day" src="C:\Users\Student\Documents\GitHub\time-of-day\images\morning.jpg">
+	 	<img id="night" src="https://github.com/sword20/time-of-day/blob/main/images/night.jpg?raw=true">
+		<img id="day" src="https://github.com/sword20/time-of-day/blob/main/images/morning.jpg?raw=true">
 	  <img src="http://dummyimage.com/300x400" alt="Picture of Me!" class="flexible" />
      </main>
     <footer>
