changes nowDate to nowHours

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ function SetImage(){
 	let nowHours = nowDate.getHours();     
    
     
-    if(nowDate < 12){
+    if(nowHours < 12){
          $('#day').show();
          $('#night').hide();
     }else{
