Adds Image code to original Java code

--- a/index.html
+++ b/index.html
@@ -87,41 +87,26 @@
     </footer>
 	<!-- END Footer -->
 	<script>
-		{
 		let myDate = new Date();
 		let myHours = myDate.getHours();
 		let myGreeting = "";
 		let myColor = "";
+		let myImage = "";
 
 		if(myHours >12){
 		myGreeting = "Good Afternoon!";
 		myColor = "orange";
+		myImage = "#night";
 		}else{
 		myGreeting = "Good Morning?";
 		myColor = "yellow";
+		myImage = "#day";
 		}
 
 		document.getElementById('mydiv').innerHTML = myGreeting;
 		document.body.style.backgroundColor = myColor;
-	}
-		$(document).ready(function() {  
-    SetImage();
-    window.setInterval(SetImage,1000);
-});
-
-function SetImage(){     
-	let nowDate = new Date() ;
-	let nowHours = nowDate.getHours();     
-   
-    
-    if(nowHours < 12){
-         $('#day').show();
-         $('#night').hide();
-    }else{
-         $('#night').show();
-         $('#day').hide();
-    }
-}
+		document.SetImage() = myImage;
+	
 	</script>
 </body>
 </html>
