Uses image of Superman to test image

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	 <p>The LIST elements inside the NAV are displayed inline by setting the display to be inline-block.  Bullets are removed by setting the UL to display</p>
 	 <p>The FOOTER includes a clear:both to keep everything above it!</p>
 	 	<img id="night" src="https://github.com/sword20/time-of-day/blob/main/images/night.jpg">
-		<img id="day" src="http://dummyimage.com/300x400">
+		<img id="day" src="https://upload.wikimedia.org/wikipedia/en/3/35/Supermanflying.png">
 	  <img src="http://dummyimage.com/300x400" alt="Picture of Me!" class="flexible" />
      </main>
     <footer>
