Uses Batman for night to test image

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 			max-width:300px; /* actual size of image */
 			width:33%; /* approximate size taken on screen in maximum view */
 		}
+		img.time {
+			float:left;
+			display:inline-block;
+			padding:20px;
+			max-width:300px; /* actual size of image */
+			width:33%; /* approximate size taken on screen in maximum view */
+		}
 		p {margin:10px;}
 		h1,h2,h3,h4,h5,h6{
 			font-weight:normal;
@@ -75,8 +82,8 @@
 	 <p>There is an image with a class of FLEXIBLE which is set to a max-width equal to the size of the image.  Simutaneously the class sets the image to a percentage width, allowing the image to flex in size.  The height is not changed, as this would skew the image.</p>
 	 <p>The LIST elements inside the NAV are displayed inline by setting the display to be inline-block.  Bullets are removed by setting the UL to display</p>
 	 <p>The FOOTER includes a clear:both to keep everything above it!</p>
-	 	<img id="night" src="https://github.com/sword20/time-of-day/blob/main/images/night.jpg">
-		<img id="day" src="https://upload.wikimedia.org/wikipedia/en/3/35/Supermanflying.png">
+	 	<img id="night" src="https://upload.wikimedia.org/wikipedia/en/c/c7/Batman_Infobox.jpg" class="time">
+		<img id="day" src="https://upload.wikimedia.org/wikipedia/en/3/35/Supermanflying.png" class="time">
 	  <img src="http://dummyimage.com/300x400" alt="Picture of Me!" class="flexible" />
      </main>
     <footer>
@@ -93,7 +100,7 @@
 		let myColor = "";
 		let myImage = "";
 
-		if(myHours >12){
+		if(myHours > 12){
 		myGreeting = "Good Afternoon!";
 		myColor = "orange";
 		myImage = "#night";
