--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 	 <p>There is an image with a class of FLEXIBLE which is set to a max-width equal to the size of the image.  Simutaneously the class sets the image to a percentage width, allowing the image to flex in size.  The height is not changed, as this would skew the image.</p>
 	 <p>The LIST elements inside the NAV are displayed inline by setting the display to be inline-block.  Bullets are removed by setting the UL to display</p>
 	 <p>The FOOTER includes a clear:both to keep everything above it!</p>
-		 <div id="myimg">Image goes here</div>
+	 	<img id="hour" src="https://upload.wikimedia.org/wikipedia/en/c/c7/Batman_Infobox.jpg" class="time">
+		<img id="hour" src="https://upload.wikimedia.org/wikipedia/en/3/35/Supermanflying.png" class="time">
 	  <img src="http://dummyimage.com/300x400" alt="Picture of Me!" class="flexible" />
      </main>
     <footer>
@@ -97,21 +98,31 @@
 		let myHours = myDate.getHours();
 		let myGreeting = "";
 		let myColor = "";
-		let myImage = "";
 
 		if(myHours >12){
 		myGreeting = "Good Afternoon!";
 		myColor = "orange";
-		myImage = src="https://upload.wikimedia.org/wikipedia/en/3/35/Supermanflying.png";
 		}else{
 		myGreeting = "Good Morning?";
 		myColor = "yellow";
-		myImage = src="https://upload.wikimedia.org/wikipedia/en/c/c7/Batman_Infobox.jpg";
 		}
 
 		document.getElementById('mydiv').innerHTML = myGreeting;
 		document.body.style.backgroundColor = myColor;
-		document.getElementById('myimg').innerHTML = myImage;
+		
+
+
+function SetImage(){     
+	var image = document.getElementById('hour')
+
+    if(nowhours < 12){
+        image.src="https://upload.wikimedia.org/wikipedia/en/3/35/Supermanflying.png"
+    }else{
+		image.src="https://upload.wikimedia.org/wikipedia/en/c/c7/Batman_Infobox.jpg"
+	}
+	$( document ).ready(function() {  
+    SetImage();
+}
 	
 	</script>
 </body>
