adds nowdate to script

--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
 
 function SetImage(){     
 	var image = document.getElementById('hour')
+	let nowdate = new Date();
+	let nowhours = nowdate.gethours();
 
     if(nowhours < 12){
         image.src="https://upload.wikimedia.org/wikipedia/en/3/35/Supermanflying.png"
