Uses images from github

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 		if(myHours >12){
 		myGreeting = "Good Afternoon!";
 		myColor = "orange";
-		image.src="https://upload.wikimedia.org/wikipedia/en/c/c7/Batman_Infobox.jpg"
+		image.src="night.jpg"
 		}else{
 		myGreeting = "Good Morning?";
 		myColor = "yellow";
-		image.src="https://upload.wikimedia.org/wikipedia/en/3/35/Supermanflying.png"
+		image.src="morning.jpg"
 
 		}
 
