fixes image source link

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 		if(myHours >12){
 		myGreeting = "Good Afternoon!";
 		myColor = "orange";
-		image.src="https://github.com/sword20/time-of-day/blob/main/images/night.jpg"
+		image.src="/images/night.jpg"
 		}else{
 		myGreeting = "Good Morning?";
 		myColor = "yellow";
-		image.src="https://github.com/sword20/time-of-day/blob/main/images/morning.jpg"
+		image.src="/images/morning.jpg"
 
 		}
 
