--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 		if(myHours >12){
 		myGreeting = "Good Afternoon!";
 		myColor = "orange";
-		image.src="time-of-day/images/night.jpg"
+		image.src="time-of-day/blob/main/images/night.jpg?raw=true"
 		}else{
 		myGreeting = "Good Morning?";
 		myColor = "yellow";
-		image.src="time-of-day/images/morning.jpg"
+		image.src="time-of-day/blob/main/images/morning.jpg?raw=true"
 
 		}
 
