pulls github image from google

--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
 	 <p>There is an image with a class of FLEXIBLE which is set to a max-width equal to the size of the image.  Simutaneously the class sets the image to a percentage width, allowing the image to flex in size.  The height is not changed, as this would skew the image.</p>
 	 <p>The LIST elements inside the NAV are displayed inline by setting the display to be inline-block.  Bullets are removed by setting the UL to display</p>
 	 <p>The FOOTER includes a clear:both to keep everything above it!</p>
-	 	<img id="img" class="time">
-	  <img src="http://dummyimage.com/300x400" alt="Picture of Me!" class="flexible" />
+	  <img img id="img" alt="Picture of Me!" class="flexible" />
      </main>
     <footer>
       <small>&copy; 2013, All Rights Reserved ~
@@ -102,11 +101,11 @@
 		if(myHours >12){
 		myGreeting = "Good Afternoon!";
 		myColor = "orange";
-		image.src="time-of-day/blob/main/images/night.jpg"
+		image.src="http://xoomer.virgilio.it/mnlmanci/9_file/MOON%20GODDESS%201995.jpgg"
 		}else{
 		myGreeting = "Good Morning?";
 		myColor = "yellow";
-		image.src="time-of-day/blob/main/images/morning.jpg"
+		image.src="http://xoomer.virgilio.it/mnlmanci/9_file/GODDESS%20OF%20THE%20SUN%201995.jpg"
 
 		}
 
