change image source

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		}else{
 		myGreeting = "Good Morning?";
 		myColor = "yellow";
-		image.src="http://xoomer.virgilio.it/mnlmanci/9_file/GODDESS%20OF%20THE%20SUN%201995.jpg"
+		image.src="https://www.picclickimg.com/d/l400/pict/324205426000_/Bob-Mackie-Goddess-of-the-Sun-1995-Barbie.jpg"
 
 		}
 
