--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 		if(myHours >12){
 		myGreeting = "Good Afternoon!";
 		myColor = "orange";
-		image.src="http://xoomer.virgilio.it/mnlmanci/9_file/MOON%20GODDESS%201995.jpgg"
+		image.src="https://upload.wikimedia.org/wikipedia/en/c/c7/Batman_Infobox.jpg"
 		}else{
 		myGreeting = "Good Morning?";
 		myColor = "yellow";
-		image.src="https://www.picclickimg.com/d/l400/pict/324205426000_/Bob-Mackie-Goddess-of-the-Sun-1995-Barbie.jpg"
+		image.src="https://upload.wikimedia.org/wikipedia/en/3/35/Supermanflying.png"
 
 		}
 
