--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 		let myColor = "";
 		var image = document.getElementById('img');
 
-		if(myHours >12){
+		if(myHours > 12){
 		myGreeting = "Good Afternoon!";
 		myColor = "orange";
-		image.src="https://upload.wikimedia.org/wikipedia/en/c/c7/Batman_Infobox.jpg"
+		image.src="\time-of-day\images\night.jpg"
 		}else{
 		myGreeting = "Good Morning?";
 		myColor = "yellow";
