--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		if(myHours > 12){
 		myGreeting = "Good Afternoon!";
 		myColor = "orange";
-		image.src="\time-of-day\images\night.jpg"
+		image.src="https://github.com/sword20/time-of-day/blob/main/images/night.jpg?raw=true"
 		}else{
 		myGreeting = "Good Morning?";
 		myColor = "yellow";
