adds logical and

--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
 		let myColor = "";
 		var image = document.getElementById('img');
 
-	if(myHours < 12){
+	if(myHours >= 5 && myHours <12){
 		myGreeting = "Good Morning?";
 		myColor = "yellow";
 		image.src="https://github.com/sword20/time-of-day/blob/main/images/morning.jpg?raw=true"
-	}else if(myHours < 17){
+	}else if(myHours >= 12  && myHours <18){
 		myGreeting = "Good Afternoon!";
 		myColor = "cyan";
 		image.src="https://github.com/sword20/time-of-day/blob/main/images/afternoon.jpg?raw=true"
-	}else if(myHours < 21){
+	}else if(myHours >= 18 && myHours <21){
 		myGreeting = "Good Evening";
 		myColor = "orange";
 		image.src="https://github.com/sword20/time-of-day/blob/main/images/evening.jpg?raw=true"
@@ -115,6 +115,7 @@
 		myColor = "blue";
 		image.src="https://github.com/sword20/time-of-day/blob/main/images/night.jpg?raw=true"
 	}
+
 		document.getElementById('mydiv').innerHTML = myGreeting;
 		document.body.style.backgroundColor = myColor;
 		
